--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 # Google AI
 GOOGLE_API_KEY=AIzaSyACq7WiTZmEy4jqC-LSLgQok-KHOJrxuWU
-GEMINI_MODEL=gemini-2.5-flash-lite
+GEMINI_MODEL=gemini-1.5-flash
 EMBEDDING_MODEL=text-embedding-001
 
 # App
